PR bin/51123 - make >&- work in all cases, and while doing that fix things so that >/dev/stdout </dev/stdin (etc) work as well (in all cases).

ok christos@